Fixed social widget spacing

--- a/content/css/partials/_default.scss
+++ b/content/css/partials/_default.scss
@@ -317,7 +317,6 @@ $theteam-height: $base-line-height * 12;
 
 .rev .twittr, .grab .twittr {
   height: $base-line-height;
-  width: 38px;
   background: transparent center center no-repeat url('/images/twitter.png?v2');
 }
 
