--- a/content/css/partials/_global.scss
+++ b/content/css/partials/_global.scss
@@ -514,7 +514,7 @@ a.button {
   }
 
   .menu ul li {
-    margin-left: 19px; // Can we come up with a generic centering thing?
+    margin-left: 21px; // Can we come up with a generic centering thing?
 
     &:first-child {
       margin-left: 0;
